--- a/EtteplanMORE.ServiceManual.UnitTests/EtteplanMORE.ServiceManual.UnitTests.csproj
+++ b/EtteplanMORE.ServiceManual.UnitTests/EtteplanMORE.ServiceManual.UnitTests.csproj
@@ -7,14 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.console" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.utility" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EtteplanMORE.ServiceManual.ApplicationCore\EtteplanMORE.ServiceManual.ApplicationCore.csproj" />
+    <ProjectReference Include="..\EtteplanMORE.ServiceManual.Web\EtteplanMORE.ServiceManual.Web.csproj" />
   </ItemGroup>
 
 </Project>
